--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,3 +1,4 @@
-baseURL: https://example.org/
+baseURL: http://localhost:8000/
 languageCode: en-us
-title: My New Hugo Site
+title: Srishti Gureja
+theme: ["PaperMod"]
