Static files for deployment

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: http://localhost:8000/
+baseURL: https://srishti-git1110.github.io/
 languageCode: en-us
 title: Srishti Gureja
 theme: ["PaperMod"]
