--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,4 +28,5 @@ jobs:
           publish_dir: ./public
           user_name: 'srishti-git1110'
           user_email: 'srishtigureja1110@gmail.com'
+          publish_branch: 'main'
           
