remove wip blog

--- a/config.yaml
+++ b/config.yaml
@@ -142,4 +142,7 @@ markup:
     # guessSyntax: true
     # lineNos: true
     # style: monokai
+  goldmark:
+    renderer:
+      unsafe: true
 markdown: kramdown
