update about + new blog

--- a/config.yaml
+++ b/config.yaml
@@ -73,7 +73,7 @@ params:
     - name: googlescholar
       url: "https://scholar.google.com/citations?user=CII6eOgAAAAJ&hl=en"
     - name: twitter
-      url: "https://twitter.com/sGx_tweets"
+      url: "https://twitter.com/srishti_gureja"
     - name: github
       url: "https://github.com/srishti-git1110"
 
